--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,11 +32,26 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage numpy setuptools
+          pip install coverage numpy setuptools build
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build, run test and coverage
         run: |
+          rm -rf dist/*
           ./coverage_test.sh
-      - name: Build sdist
+      - name: Build wheel
+        run: python3 -m build
+      - name: Build wheel
+        run: rm -rf dist/bjdata-*.whl
+      - name: Check If the Build Version Exists on PyPI
+        id: perform_pypi_upload_check
+        shell: bash
         run: |
-          python setup.py sdist
+          $GITHUB_WORKSPACE/.github/check-pypi-upload.sh
+      - name: Upload packages to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        if: ${{ github.actor == 'fangq' && steps.perform_pypi_upload_check.outputs.perform_pypi_upload == 1  && github.event_name != 'pull_request'}}
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          verify_metadata: false
+          verbose: true
+          skip_existing: true
