--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,16 +32,27 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage numpy setuptools build
+          pip install coverage numpy setuptools
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build, run test and coverage
         run: |
-          rm -rf dist/*
           ./coverage_test.sh
+
+  deploy:
+    name: Upload bjdata wheels
+    runs-on: ubuntu-22.04
+    needs: build
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'
+      - name: Install build
+        run: python3 -m pip install --upgrade build
       - name: Build wheel
-        run: python3 -m build
-      - name: Build wheel
-        run: rm -rf dist/bjdata-*.whl
+        run: |
+          python3 -m build
+          rm -rf dist/bjdata-*.whl
       - name: Check If the Build Version Exists on PyPI
         id: perform_pypi_upload_check
         shell: bash
