--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 requires = [
     "setuptools>=42",
     "wheel",
-    "numpy"
+    "numpy>=2.0.0rc1; python_version>='3.9'",
+    "numpy>=1.8.0; python_version<'3.9'"
 ]
 build-backend = "setuptools.build_meta"
