--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,11 @@
 requires = [
     "setuptools>=42",
     "wheel",
-    "numpy>=2.0.0rc1; python_version>='3.9'",
-    "numpy>=1.8.0; python_version<'3.9'"
+    "oldest-supported-numpy"
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "bjdata"
+requires-python = ">=3.7"
+dependencies = ["numpy>=1.19"]
