--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bjdata"
+dynamic = ["version"]
 requires-python = ">=3.7"
 dependencies = ["numpy>=1.19"]
