--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,3 @@
 [build-system]
-requires = [
-    "setuptools>=42",
-    "wheel",
-    "oldest-supported-numpy"
-]
+requires = ["setuptools>=40", "wheel", "oldest-supported-numpy"]
 build-backend = "setuptools.build_meta"
-
-[project]
-name = "bjdata"
-dynamic = ["version"]
-requires-python = ">=3.7"
-dependencies = ["numpy>=1.19"]
